Adicionando a foto do cachorro

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Primeiro commit da aula de git</h1>
+    <img src="images/dogslove.jpg" alt="Foto de um cachorro e um gato">
 </body>
 </html>
